--- a/firstDemo/terpRowVR1.html
+++ b/firstDemo/terpRowVR1.html
@@ -7,6 +7,9 @@
     <script src="./js/fastClick.js"></script>
     <script src="./js/jquery-3.3.1.js"></script>
 
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
     <script type="text/javascript">
       $(document).ready(function(){
 
@@ -94,8 +97,31 @@
         }
       });
     </script>
+
+    <style type="text/css">
+
+      .displayHolder{
+        display: table;
+        text-align: center;
+
+        position:absolute; 
+        margin-left:-9rem;
+        left:50%;
+        width:100px;
+          bottom:5%;
+
+        z-index: 1;
+      }
+    </style>
   </head>
   <body>
+
+    <div class="displayHolder">
+      <div class="card bg-primary" style="width: 18rem">
+          <p class='card-title text-white'>Click on Terrapin Row To Explore More!</p>
+      </div>
+    </div>
+
     <a-scene cursor="rayOrigin: mouse">
     	<a-assets>
 	      <a-asset-item id="building_obj" src="./models/BuildingModel2.obj"></a-asset-item>
