--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
       <div class='card-block '>
         <h3 class='card-header'><a class='noHighlight' href="./experiences/MilkBoyArtHouse.html">Bar/Concert Venue Virtual Experience</a></h3>
           <br>
-          <p style="text-align: center">Experience full screen <a href="./experiences/MilkBoyArtHouse.html">here</a></p>
-        <iframe src="./experiences/MilkBoyArtHouse.html"></iframe>
+          <!-- ./experiences/MilkBoyArtHouse.html -->
+          <p style="text-align: center">Experience full screen <a href="../firstDemo/terpRowTour.html">here</a></p>
+        <iframe src="../firstDemo/terpRowTour.html"></iframe>
       </div>
     </div>
 
