changed some text

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <div class='card cardShadow'>
       <div class='card-block '>
-        <h3 class='card-header'><a class='noHighlight' href="./experiences/MilkBoyArtHouse.html">Bar/Concert Venue Virtual Experience</a></h3>
+        <h3 class='card-header'><a class='noHighlight' href="../firstDemo/terpRowTour.html">Real Estate Tour</a></h3>
           <br>
           <!-- ./experiences/MilkBoyArtHouse.html -->
           <p style="text-align: center">Experience full screen <a href="../firstDemo/terpRowTour.html">here</a></p>
