added snapchat section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
 
   <style type="text/css">
 
+    img.center {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: auto;
+      margin-bottom: 5%;
+    }
+
+    div.center {
+      margin: 0 auto;
+      
+    }
+
     .cardShadow{
 
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -112,6 +125,21 @@
         <p style="text-align: center">Open <a href="./img/hiro.png">this</a> marker and go to <a href="./firstDemo/ar1.html">this</a> page, then point phone at the marker to show hologram.</p>
         <br>
         <p style="text-align: center"><img class='dir' src="./img/pointPhone.png" alt='logo'></p>
+      </div>
+    </div>
+
+    <div class='card cardShadow' id="snapchat">
+      <div class='card-block '>
+        <h3 class='card-header'><a class='noHighlight'>Snapchat Lense</a></h3>
+        <br>
+        <div class="row">
+          <div class="col-md-6">
+            <img src="./img/snapcode_face.svg" class="center" style="width: 50%">         
+          </div>
+          <div class="col-md-6">
+            <img src="./img/snapcode_startupshell.svg" class="center" style="width: 50%"> 
+          </div>
+        </div>
       </div>
     </div>
 
